services/media-library/templates/jellyfin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
spec:
  selector: { { - include "media-library.selectorLabels" . | nindent 4 } }
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
