services/media-library/templates/jellyfin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
spec:
  rules:
  - host: "jellyfin.simonmalm.com"
    http:
      path: "/"
      pathType: Prefix
      backend:
        service:
          name: jellyfin-service
          port: 
            number: 8096
  tls:
  - hosts: 
    - "jellyfin.simonmalm.com"
    secretName: jellyfin-simonmalm-com
