services/media-library/templates/qbittorrent-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbit.simonmalm.com`)
      kind: Rule
      services:
        - name: qbittorrent-service
          port: 8080
    - match: Host(`qbit.local.simonmalm.com`)
      kind: Rule
      services:
        - name: qbittorrent-service
          port: 8080

  tls:
    secretName: simonmalm-com-tls
